courses/430_programming-languages/assignment-6/tests/error/hw4_error14.correct
unary operator '-' requires int, found bool
